[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Scenes/Levels/TestLevel.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Resources/Tilesets/standardBG_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://src/Scenes/Elements/ConveyorBelt/ConveyorBelt.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/fundo_versão1.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Scenes/Elements/PackageSlotSpawner/PackageSlotSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Scenes/Elements/PackageSlotDespawner/PackageSlotDespawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Scenes/Elements/PackageSlotDespawner/GreenPackageSlotDespawner.gd" type="Script" id=8]
[ext_resource path="res://assets/audio/esteira - opção 1.wav" type="AudioStream" id=9]
[ext_resource path="res://src/Scenes/Elements/PackageSlotDespawner/BluePackageSlotDespawner.gd" type="Script" id=10]
[ext_resource path="res://assets/audio/sucesso - opção 3.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/erro - opção 1.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/Sprites/speaker-icon-sound-icon-white.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprites/sem_som.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.092, 31.3602 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://src/arcadeclassic/ARCADECLASSIC.TTF"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://src/arcadeclassic/ARCADECLASSIC.TTF"

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = SubResource( 4 )

[node name="TestLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 765.092, 479 )
scale = Vector2( 1e-05, 1e-05 )
current = true
zoom = Vector2( 1.6, 1.6 )

[node name="BG_TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 80, 80 )
cell_quadrant_size = 40
format = 1
tile_data = PoolIntArray( 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 19, 6, 0, 131071, 6, 0, 65536, 6, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 6, 0, 65555, 6, 0, 196607, 6, 0, 131072, 6, 0, 131073, 1, 0, 131074, 0, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 1, 0, 131090, 6, 0, 131091, 6, 0, 262143, 6, 0, 196608, 6, 0, 196609, 1, 0, 196610, 0, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 1, 0, 196626, 6, 0, 196627, 6, 0, 327679, 6, 0, 262144, 1, 0, 262145, 1, 0, 262146, 5, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 1, 0, 262162, 1, 0, 262163, 6, 0, 393215, 6, 0, 327680, 1, 0, 327681, 0, 0, 327682, 5, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 2, 0, 327698, 1, 0, 327699, 6, 0, 458751, 6, 0, 393216, 2, 0, 393217, 0, 0, 393218, 5, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 2, 0, 393234, 2, 0, 393235, 6, 0, 524287, 6, 0, 458752, 2, 0, 458753, 5, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 2, 0, 458771, 6, 0, 589823, 6, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 6, 0, 655359, 6, 0, 589824, 1, 0, 589825, 1, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 1, 0, 589842, 1, 0, 589843, 6, 0, 720895, 6, 0, 655360, 6, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 6, 0, 655379, 6, 0, 786431, 6, 0, 720896, 6, 0, 720897, 6, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 6, 0, 720902, 6, 0, 720903, 6, 0, 720904, 6, 0, 720905, 6, 0, 720906, 6, 0, 720907, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 720915, 6, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 949.405, 520 )

[node name="PackageSlotSpawner" parent="." instance=ExtResource( 6 )]
position = Vector2( 239, -40 )

[node name="EntryConveyorBelt" type="Node2D" parent="."]

[node name="ConveyorBelt" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 240, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 1
conveyor_color = 2

[node name="ConveyorBelt2" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 320, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt3" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 400, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt4" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 480, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt5" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 560, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt6" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 640, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt7" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 720, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt8" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 800, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt9" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 880, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt10" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 960, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt11" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 1040, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt12" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 1120, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt13" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 1200, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt15" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 1280, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 2

[node name="ConveyorBelt14" parent="EntryConveyorBelt" instance=ExtResource( 4 )]
position = Vector2( 1360, 320 )
scale = Vector2( -1, 1 )
conveyor_tile = 2
conveyor_color = 2

[node name="Barrier" type="KinematicBody2D" parent="."]
position = Vector2( 1383.86, 354 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier"]
modulate = Color( 1, 0, 0.866667, 1 )
shape = SubResource( 1 )

[node name="RightBlueExitBelt" type="Node2D" parent="."]

[node name="BluePackageDespawner" parent="RightBlueExitBelt" instance=ExtResource( 7 )]
position = Vector2( 1633.9, 676.541 )
script = ExtResource( 10 )

[node name="PackageSlotSpawner2" parent="RightBlueExitBelt" instance=ExtResource( 6 )]
position = Vector2( 1144, 673 )
seconds_between_spawns = 0.7
spawns_packages = false

[node name="ConveyorBelt" parent="RightBlueExitBelt" instance=ExtResource( 4 )]
position = Vector2( 1200, 640 )
scale = Vector2( -1, 1 )
conveyor_tile = 1
conveyor_color = 1

[node name="ConveyorBelt3" parent="RightBlueExitBelt" instance=ExtResource( 4 )]
position = Vector2( 1360, 640 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 1

[node name="ConveyorBelt7" parent="RightBlueExitBelt" instance=ExtResource( 4 )]
position = Vector2( 1280, 640 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 1

[node name="ConveyorBelt4" parent="RightBlueExitBelt" instance=ExtResource( 4 )]
position = Vector2( 1440, 640 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 1

[node name="ConveyorBelt5" parent="RightBlueExitBelt" instance=ExtResource( 4 )]
position = Vector2( 1520, 640 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 1

[node name="ConveyorBelt6" parent="RightBlueExitBelt" instance=ExtResource( 4 )]
position = Vector2( 1600, 640 )
scale = Vector2( -1, 1 )
conveyor_tile = 0
conveyor_color = 1

[node name="LeftGreenExitBelt" type="Node2D" parent="."]

[node name="ConveyorBelt" parent="LeftGreenExitBelt" instance=ExtResource( 4 )]
position = Vector2( 320, 640 )
conveyor_tile = 1
conveyor_color = 0

[node name="ConveyorBelt2" parent="LeftGreenExitBelt" instance=ExtResource( 4 )]
position = Vector2( 160, 640 )
conveyor_tile = 0
conveyor_color = 0

[node name="ConveyorBelt4" parent="LeftGreenExitBelt" instance=ExtResource( 4 )]
position = Vector2( 80, 640 )
conveyor_tile = 0
conveyor_color = 0

[node name="ConveyorBelt5" parent="LeftGreenExitBelt" instance=ExtResource( 4 )]
position = Vector2( 0, 640 )
conveyor_tile = 0
conveyor_color = 0

[node name="ConveyorBelt6" parent="LeftGreenExitBelt" instance=ExtResource( 4 )]
position = Vector2( -80, 640 )
conveyor_tile = 0
conveyor_color = 0

[node name="ConveyorBelt3" parent="LeftGreenExitBelt" instance=ExtResource( 4 )]
position = Vector2( 240, 640 )
conveyor_tile = 0
conveyor_color = 0

[node name="PackageSlotSpawner3" parent="LeftGreenExitBelt" instance=ExtResource( 6 )]
position = Vector2( 380.93, 673 )
seconds_between_spawns = 0.7
spawns_packages = false

[node name="GreenPackageSlotDespawner" parent="LeftGreenExitBelt" instance=ExtResource( 7 )]
position = Vector2( -114.211, 670.184 )
script = ExtResource( 8 )

[node name="HUD" type="Node2D" parent="."]
z_index = 5

[node name="Control" type="Control" parent="HUD"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HUD/Control"]
margin_right = 240.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD/Control"]
anchor_right = 40.0
anchor_bottom = 24.0
margin_left = 1120.0
margin_right = 1360.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musica_fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Musics"

[node name="Esteira" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 13.126
bus = "Effects"

[node name="Acerto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Effects"

[node name="Erro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 65.749
margin_top = 822.527
margin_right = 154.749
margin_bottom = 918.527
rect_scale = Vector2( 1.8, 2 )
min_value = -65.0
max_value = -19.0
value = -19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botao_som" type="TextureButton" parent="HSlider"]
margin_left = -67.2339
margin_top = 21.5313
margin_right = 832.766
margin_bottom = 541.531
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 14 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="packageDelivered" from="RightBlueExitBelt/BluePackageDespawner" to="." method="_on_BluePackageDespawner_packageDelivered"]
[connection signal="packageLost" from="RightBlueExitBelt/BluePackageDespawner" to="." method="_on_BluePackageDespawner_packageLost"]
[connection signal="packageDelivered" from="LeftGreenExitBelt/GreenPackageSlotDespawner" to="." method="_on_GreenPackageSlotDespawner_packageDelivered"]
[connection signal="packageLost" from="LeftGreenExitBelt/GreenPackageSlotDespawner" to="." method="_on_GreenPackageSlotDespawner_packageLost"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="HSlider/botao_som" to="." method="_on_botao_som_pressed"]
